Added silent and broadcasted bans
./ban [player] (-s) (reason)
( ) = optional
[ ] = mandatory

adding -s after the player name will make the ban only visible to you

Not having -s will broadcast the message to everyone

The banned.yml and plugin.yml were switched
Fixed plugin.yml

Bug:
“-s” will be included in the ban reason
tempban is currently bugged where the time is “:”

Not working:
Tempban
Kick

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,15 @@
-#Config file :
-#You don't have to configure anything here!
-
-bans:
-
-ends:
+author: ShadowCasted K1ds
+main: com.shadowcasted.shadowbans.ShadowBans
+name: ShadowBans
+version: 0.0.3
+commands:
+  ban:
+    description:
+  unban:
+    description:
+  tempban:
+    description:
+  checkban:
+    description:
+  uuid:
+    description:
