--- a/src/banned.yml
+++ b/src/banned.yml
@@ -1,4 +1,6 @@
-author: ShadowCasted K1ds
-main: com.shadowcasted.bukkit.shadowbans.ShadowBans
-name: ShadowBans
-version: 0.0.2
+#Config file :
+#You don't have to configure anything here!
+
+bans:
+
+ends:
